packages/mapper/docs-site/versioned_docs/version-0.7.3/intro.md
---
title: Docs Home
description: The documentation hub for LLM Project Mapper.
slug: /
---
# LLM Project Mapper Docs

![LLM Project Mapper hero](/assets/llm-project-mapper-hero.png)

LLM Project Mapper is an AI-friendly project scaffold that turns scattered engineering context into a stable operating model for coding agents and human reviewers.

:::tip What this site is
This docs site is a curated view over the repo's real documentation. The source of truth stays in the repository root, and `scripts/sync-docs-site.mjs` regenerates the Docusaurus docs from those markdown files.
:::

## Start here

- **Quickstart**: install the starter in seconds and choose the right bootstrap path.
- **Guide**: use the private overlay workflow on top of an existing host project.
- **Concepts**: understand the architecture and domain map conventions the starter ships.
- **YOOL / tuple / HAMT**: inspect the capability-addressing pattern used by the scaffold.
- **Reference**: inspect CLI flags, the init handoff contract, and the SessionStart hook behavior.
- **Community**: contribute improvements and add your real-world showcase.

## Site map

| Area | What it covers |
| --- | --- |
| [Quickstart](/quickstart/get-going) | Fast install path, prerequisites, and starter overview |
| [Guide](/guide/private-overlay) | Private overlay installation on an existing repo |
| [Concepts](/concepts/skills-and-agents) | How the starter organizes skills, agents, and shared context |
| [YOOL / tuple / HAMT](/yool-tuple-hamt) | Capability addressing, receipts, and MCP edge guidance |
| [Reference](/reference/init-handoff) | Bootstrap contract, CLI flags, hooks, and generated docs |
| [Community](/community/showcase) | Showcase entries and contribution workflow |
